get list object
