# api/docs/swagger.yaml
@@ -593,6 +593,12 @@ definitions:
         description: Version is the TLS version used by the connection (e.g. VersionTLS12).
         type: integer
     type: object
+  ucode_ucode_go_auth_service_api_models.CommonMessage:
+    properties:
+      data:
+        additionalProperties: true
+        type: object
+    type: object
   ucode_ucode_go_auth_service_api_models.Connection:
     properties:
       client_type_id:
@@ -7793,6 +7799,70 @@ paths:
       summary: MultiCompanyLogin
       tags:
       - V2_Session
+  /v2/object/get-list/{table_slug}:
+    post:
+      consumes:
+      - application/json
+      description: Get Connection List
+      operationId: get_list_object
+      parameters:
+      - description: Resource-Id
+        in: header
+        name: Resource-Id
+        type: string
+      - description: Environment-Id
+        in: header
+        name: Environment-Id
+        required: true
+        type: string
+      - description: project_id
+        in: query
+        name: project_id
+        type: string
+      - description: table_slug
+        in: path
+        name: table_slug
+        required: true
+        type: string
+      - description: data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/ucode_ucode_go_auth_service_api_models.CommonMessage'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: GetConnectionListResponseBody
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "400":
+          description: Invalid Argument
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "500":
+          description: Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/http.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: Get Connection List
+      tags:
+      - V2_Connection
   /v2/permission:
     get:
       consumes:
